Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -364,13 +364,12 @@ hr.line {
 	z-index: 1;
 }
 
-.widget .extendednavigation ul {
-	float: none;
+.widget .extendednavigation > ul {
 	text-align: right;
 	margin-bottom: 12px;
+	width: 100%;
 	li, &.align-left li {
-		float: none;
-		text-align: right;
+		width: 100%;
 		a, > .text {
 			padding: 10px 20px 11px;
 			font-family:@font-swatch6-font-family;
@@ -387,7 +386,6 @@ hr.line {
 	}
 	li.folder {
 		margin-right: 0;
-		margin-left: 10px;
 		position: relative;
 		&:before, &:after {
 			display: block;
